--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--<link rel="stylesheet" href="templates/style.css">-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <style>
 html, body, #main {
@@ -40,8 +40,26 @@ img {
     padding: 8px;
 }
 
-.autocomplete-content dropdown-content {
-    right: 400px;
+#spin {
+    position: absolute;
+    left: 0; right: 0;
+    top: 0; bottom: 0;
+    margin: auto;
+}
+
+#dropdown {
+    display: none;
+    position: absolute;
+    z-index: 3;
+    max-height: 16em;
+    overflow-y: scroll;
+    padding: 8px;
+    margin-top: 0;
+}
+
+#suggested-keywords {
+    border-bottom: none;
+    margin-bottom: 0;
 }
 
 #controls {
@@ -94,9 +112,26 @@ div.tooltip {
         pointer-events: none;
 }
 
-#csv-download {
+#grant-data {
+    width: 75%;
+}
+
+#keywords {
+    margin: 0;
+    border-bottom: none;
+    overflow-y: scroll;
+    max-height: 12em;
+}
+
+#csv-download { 
     float: right;
     margin-right: 24px;
+    margin-top: -48px;
+}
+
+.clear {
+    float: right;
+    margin-top: -36px;
 }
 
 #credits {
@@ -107,7 +142,7 @@ div.tooltip {
 }
 
 #credits img {
-    width: 240px;
+    height: 80px;
 }
 
 .btn-floating {
@@ -118,27 +153,46 @@ div.tooltip {
 </style>
 </head>
 <body>
-    <div id="main" class="row center">
+    <div id="main" class="row">
         <div class="col s4" id="controls">
-            <h1 class="header center" style="color: #D3B34E">NSF Grants Explorer</h1>
+            <h2 class="header center">NSF Grants Explorer</h2>
             <h5>SEARCH TERMS</h5>
-            <!--<div id="search-terms" class="chips chips-initial"></div>-->
-            <div id="keywords" class="chips"></div>
-            <input id="keywords-input" type="text" placeholder="add keywords"></input>
+            <a id="clear-terms" class="clear waves-effect waves-red btn-flat"><i class="material-icons right">clear_all</i>clear all</a>
+
+            <div id="keyword-container">
+                <div id="keywords" class="chips"></div>
+                <div id="dropdown" class="card-panel">
+                    <div id="suggested-keywords" class="card-content chips"></div>
+                </div>
+            </div>
+
             <h5>FILTER DIVISIONS</h5>
-            <div id="divisions" class="chips chips-initial chips-autocomplete"></div>
-            <button id="search-button" class="waves-effect waves-light btn" style="background-color: #005699">search</button>
+            <a id="clear-divisions" class="clear waves-effect waves-red btn-flat"><i class="material-icons right">clear_all</i>clear all</a>
+            <a id="select-all" class="clear waves-effect waves-green btn-flat"><i class="material-icons right">done_all</i>select all</a>
+            <div class="input-field">
+                <select multiple id="select-division"></select>
+                <!--<label>Select Divisions</label>-->
+            </div>
+            <button id="search-button" class="waves-effect waves-light btn blue">search</button>
             </br>
             <div id="credits">
                 <a href="https://datalab.ischool.uw.edu"><img src="/static/datalab_logo.png"></a>
-                </br>
                 <a href="https://www.moore.org"><img src="/static/moore_logo.jpg"></a>
                 </br>
                 Developed by Jesse Chamberlin, Peter Li, Jevin West at the University of Washington DataLab
             </div>
           </div>
-        <div class="col s8" id="viz" style="position:relative">
-            <div id="spin" style="position:fixed; top:50%; left:50%">
+          <div class="col s8" id="viz">
+            <div id="spin" class="preloader-wrapper big active">
+                <div class="spinner-layer spinner-blue-only">
+                    <div class="circle-clipper left">
+                        <div class="circle"></div>
+                    </div><div class="gap-patch">
+                        <div class="circle"></div>
+                    </div><div class="circle-clipper right">
+                        <div class="circle"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -150,7 +204,7 @@ div.tooltip {
                 <h4>Grants</h4>
                 <a id="csv-download" class="waves-effect waves-light blue btn"><i class="material-icons right">file_download</i>download</a>
             </div>
-            <table id="grant-table">
+            <table id="grant-table" class="striped">
                 <thead>
                     <tr>
                         <th>Grant Title</th>
@@ -173,86 +227,118 @@ div.tooltip {
     crossorigin="anonymous"></script>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/spin.js/2.0.1/spin.min.js'></script> 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
 <!--<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>-->
 <script>
+document.addEventListener("DOMContentLoaded", function() {
 
-    document.addEventListener("DOMContentLoaded", function() {
-        var elems = document.querySelectorAll(".modal");
-        var instances = M.Modal.init(elems, null);
+    let modal = document.querySelector("#grant-data");
+    let select = document.querySelector("#select-division");
+    $("#select-all").hide();
+
+    let keywordChips = document.querySelector("#keywords");
+    let suggestedChips = document.querySelector("#suggested-keywords");
+    let suggest = document.querySelector("#term-suggestions");
+
+     // initialize materialize elements
+    let modalInstance = M.Modal.init(modal, null);
+    let selectInstance = M.FormSelect.init(select, null);
+    let keywordInstance = M.Chips.init(keywordChips, {
+        onChipAdd: function(e, c) {
+            getSuggestions(keywordInstance.chipsData);
+            terms = c.firstChild.nodeValue.split(",");
+            if (terms.length > 1) {
+                keywordInstance.deleteChip(keywordInstance.chipsData.length - 1);
+                terms.forEach((t) => {
+                    keywordInstance.addChip({tag: t});
+                });
+            }
+        },
+        onChipDelete: function(e, c) {
+            getSuggestions(keywordInstance.chipsData);
+        }
     });
 
-    let searchChips = document.querySelector("#search-terms");
-    let divisionChips = document.querySelector("#divisions");
-    let searchTerms;
-    let divisions;
-    let queryDivisions = []
-    let otherDivisions = {}
-    let pct = false;
+    let keywordContainer = document.querySelector("#keyword-container");
+    let keywordInput = document.querySelector("#keywords input");
+    let dropdown = document.querySelector("#dropdown");
+    dropdown.style.width = keywordContainer.style.width;
+    let keywordFocused = false;
 
-    const keywordInput = document.getElementById("keywords-input");
-    const keywordChips = d3.select("#keywords");
-    keywordInput.addEventListener("keyup", function(e) {
-        if (e.key === "Enter") {
+    keywordInput.addEventListener("focus", function(e) {
+        dropdown.style.display = "block";
+    });
 
-            keywords = keywordInput.value.split(",");
-
-            keywordChips.selectAll("chip")
-                .data(keywords)
-                .enter().append("div")
-                .attr("class", "chip")
-                .text(d => { return d; })
-                .append("i")
-                .attr("class", "close material-icons")
-                .text("close");
-
-            keywordInput.value = "";
+    keywordInput.addEventListener("focusout", function(e) {
+        if (!keywordFocused) {
+            dropdown.style.display = "none";
+        } else {
+            keywordInput.focus();
         }
-    })
+
+    });
+
+    keywordContainer.addEventListener("mouseover", function() {
+        keywordFocused = true;
+    });
+    
+    keywordContainer.addEventListener("mouseout", function(event) {
+        let e = event.toElement || event.relatedTarget;
+        if (!this.contains(e)) {
+            keywordFocused = false;
+        }
+    });
 
     // load keyword data from server
     d3.json("/keywords", function(data) {
-        searchTerms = M.Chips.init(searchChips, {
-            data: data
+        data.forEach((d) => {
+            keywordInstance.addChip({tag: d});
         });
+
+        //keywordChips.selectAll("chip")
+        //    .data(data)
+        //    .enter().append("div")
+        //    .attr("class", "chip")
+        //    .text(d => { return d; })
+        //    .append("i")
+        //    .attr("class", "close material-icons")
+        //    .text("close");
     });
 
     // load division data from server
     d3.json("/divisions", function(data) {
-        data.forEach((d, i) => {
-            if (i < 5) { queryDivisions.push(d); }
-            else { otherDivisions[d.tag] = null; }
-        });
 
-        divisions = M.Chips.init(divisionChips, {
-            data: queryDivisions,
-            autocompleteOptions: {
-                data: otherDivisions
-            },
-            onChipAdd: function(e, chip) {
-                delete otherDivisions[chip.firstChild.textContent];
-            },
-            onChipDelete: function(e, chip) {
-                otherDivisions[chip.firstChild.textContent] = null;
-             }
-        });
+        d3.select("#select-division").selectAll("option")
+            .data(data)
+            .enter().append("option")
+            .text((d) => { return d.text; })
+            .attr("value", (d) => { return d.value; });
+
+        selectInstance = M.FormSelect.init(select, null);
 
     });
 
-    let opts = {
-        lines: 9,
-        length: 9,
-        width: 5,
-        radius: 14,
-        color: "#EE3124",
-        speed: 1.9,
-        trail: 40,
-        className: "spinner"
-    };
-    
-    let spinner = new Spinner(opts)
-    spinner.spin(document.querySelector("#spin"));
+    d3.select("#clear-terms")
+        .on("click", (d) => {
+            d3.select("#keywords").selectAll(".chip").remove();
+            keywordInstance.chipsData = [];
+            getSuggestions(keywordInstance.chipsData);
+
+        })
+
+    $("#clear-divisions").click(function(d) {
+        $("#select-all").show()
+        $(this).hide()
+        $("#select-division option").prop("selected", false);
+        M.FormSelect.init(select, null);
+    })
+
+    $("#select-all").click(function(d) {
+        $("#clear-divisions").show()
+        $(this).hide()
+        $("#select-division option").prop("selected", true);
+        M.FormSelect.init(select, null);
+    })
 
     d3.select("#search-button").on("click", () => { getData(this); });
     d3.select("#toggle-view").on("click", toggleView);
@@ -261,26 +347,19 @@ div.tooltip {
 
     function getData(event) {
 
-        spinner.spin(document.querySelector("#spin"));
+        $("#spin").show();
+        //$("#viz").hide();
 
         let data;
 
         if (event != null) {
             query = {"terms": [], "divisions": []};
 
-            keywordChips.selectAll("div").each((t) => {
-                query["terms"].push(t);
-                console.log(t);
+            keywordInstance.chipsData.forEach((c) => {
+                query["terms"].push(c.tag);
             });
 
-            //for(let t in searchTerms.chipsData) {
-            //    query["terms"].push(searchTerms.chipsData[t].tag);
-            //}
-
-            for(let d in divisions.chipsData) {
-                query["divisions"].push(divisions.chipsData[d].tag);
-            }
-
+            query["divisions"] = selectInstance.getSelectedValues();
             data = JSON.stringify(query);
 
         } else {
@@ -294,8 +373,10 @@ div.tooltip {
             contentType: "application/json",
             dataType: "json",
             complete: function(data) {
-                spinner.stop();
-                redraw(d3.csvParse(data.responseText));
+                $("#spin").hide();
+                //$("#viz").show();
+                cellData = data.responseText.split("\n\n").map(d => d3.csvParse(d));
+                redraw(cellData);
             }
         });
     };
@@ -361,12 +442,10 @@ div.tooltip {
         d3.select("#toggle-view").text("#")
         svg.selectAll("*").remove();
 
-        let allData = [[], [], [], []];
         let maxTopAbs = 0;
         let maxTopRel = 0;
         let maxBottomAbs = 0;
         let maxBottomRel = 0;
-        let currData = -1;
 
         Object.keys(cells).forEach((c) => {
             let cell = cells[c],
@@ -379,27 +458,25 @@ div.tooltip {
 
         });
 
-        data.forEach((d) => {
-            d.year = +d.year;
-            d.matching = +d.matching;
-            d.percent = d.matching/+d.total;
-            if (d.year == 2007) {
-                currData++;
-            }
-            allData[currData].push(d);
-            // update data range
-            if (currData < 2 && maxTopAbs < d.matching) maxTopAbs = d.matching;
-            else if (currData >= 2 && maxBottomAbs < d.matching) maxBottomAbs = d.matching;
-            if (currData < 2 && maxTopRel < d.percent) maxTopRel = d.percent;
-            else if (currData >= 2 && maxBottomRel < d.percent) maxBottomRel = d.percent;
+        data.forEach((c, i) => {
+            c.forEach((d) => {
+                d.year = +d.year;
+                d.matching = +d.matching;
+                d.percent = d.matching/+d.total;
 
+                // update data range
+                if (i < 2 && maxTopAbs < d.matching) maxTopAbs = d.matching;
+                else if (i >= 2 && maxBottomAbs < d.matching) maxBottomAbs = d.matching;
+                if (i < 2 && maxTopRel < d.percent) maxTopRel = d.percent;
+                else if (i >= 2 && maxBottomRel < d.percent) maxBottomRel = d.percent;
+            });
         });
 
         Object.keys(cells).forEach((c) => {
 
             let cell = cells[c];
 
-            cell.x.domain(data.map((d) => { return d.year }).sort());
+            cell.x.domain(data[c].map((d) => { return d.year }).sort());
             cell.yAbs.domain([0, c < 2 ? maxTopAbs : maxBottomAbs])
             cell.yRel.domain([0, c < 2 ? maxTopRel : maxBottomRel])
             cell.y = cell.yRel;
@@ -428,8 +505,8 @@ div.tooltip {
                 .attr("text-anchor", "end")
                 .text("%");
 
-             cell.chart.selectAll(".bar")
-                .data(allData[c])
+            cell.chart.selectAll(".bar")
+                .data(data[c])
                 .enter().append("rect")
                 .attr("class", "bar")
                 .attr("x", (d) => { return cell.x(d.year); })
@@ -453,6 +530,47 @@ div.tooltip {
                         .duration(500)
                         .style("opacity", 0);
                 });    
+        });
+    }
+
+    function getSuggestions(data) {
+        if(data.length == 0) {
+            d3.select("#suggested-keywords")
+                .selectAll(".chip")
+                .remove();
+            return;
+        }
+
+        keywords = [];
+        data.forEach((d) => {
+            keywords.push(d.tag);
+        });
+
+        $.ajax({
+            url: "/suggestions",
+            type: "POST",
+            data: JSON.stringify(keywords),
+            contentType: "application/json",
+            dataType: "json",
+            complete: function(data) {
+                let chips = data.responseText.split(",");
+
+                let suggested = d3.select("#suggested-keywords")
+                    .selectAll(".chip").data(chips, function(d) { return d; });
+                
+                suggested.exit().remove()
+
+                suggested.enter().append("div")
+                    .attr("class", "chip")
+                    .attr("vertical-align", "middle")
+                    .text((d) => { return d; })
+                    .append("i")
+                    .attr("class", "close material-icons")
+                    .text("add")
+                    .on("mousedown", (d) => { 
+                        keywordInstance.addChip({tag: d});
+                    });
+             }
         });
     }
 
@@ -485,10 +603,11 @@ div.tooltip {
             } else {
                 cell.y = cell.yAbs;
                 val = "matching";
-                tickFmt = (d) => { return "$" + d3.format(".2s")(d) };
                 if (c < 2) {
+                    tickFmt = d3.format(".2s");
                     suffix = " (#)";
                 } else {
+                    tickFmt = (d) => { return "$" + d3.format(".2s")(d) };
                     suffix = " ($)";
                 }
             }
@@ -510,24 +629,15 @@ div.tooltip {
 
     function getGrants(event) {
 
-        let data;
+        query = {"terms": [], "divisions": []};
 
-        if (event != null) {
-            query = {"terms": [], "divisions": []};
+        keywordInstance.chipsData.forEach((c) => {
+            query["terms"].push(c.tag);
+        });
 
-            for(let t in searchTerms.chipsData) {
-                query["terms"].push(searchTerms.chipsData[t].tag);
-            }
+        query["divisions"] = selectInstance.getSelectedValues();
 
-            for(let d in divisions.chipsData) {
-                query["divisions"].push(divisions.chipsData[d].tag);
-            }
-
-            data = JSON.stringify(query);
-
-        } else {
-            data = "";
-        }
+        let data = JSON.stringify(query);
 
         d3.select("#grant-table").insert("p", "tbody").text("Loading data...");
         d3.select("#grant-table tbody").selectAll("tr").remove();
@@ -539,6 +649,7 @@ div.tooltip {
             contentType: "application/json",
             dataType: "json",
             complete: function(data) {
+
                 d3.select("#grant-table p").remove();
                 displayData(d3.csvParse(data.responseText));
                 d3.select("#csv-download").attr("href", URL.createObjectURL(new Blob(["\ufeff", data.responseText])));
@@ -565,4 +676,5 @@ div.tooltip {
             .text((d) => { return d.value });
     }
 
+});
 </script>
